<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~    DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  ~
  ~    Copyright (c) [2019-2020] Payara Foundation and/or its affiliates. All rights reserved.
  ~
  ~    The contents of this file are subject to the terms of either the GNU
  ~    General Public License Version 2 only ("GPL") or the Common Development
  ~    and Distribution License("CDDL") (collectively, the "License").  You
  ~    may not use this file except in compliance with the License.  You can
  ~    obtain a copy of the License at
  ~    https://github.com/payara/Payara/blob/master/LICENSE.txt
  ~    See the License for the specific
  ~    language governing permissions and limitations under the License.
  ~
  ~    When distributing the software, include this License Header Notice in each
  ~    file and include the License file at glassfish/legal/LICENSE.txt.
  ~
  ~    GPL Classpath Exception:
  ~    The Payara Foundation designates this particular file as subject to the "Classpath"
  ~    exception as provided by the Payara Foundation in the GPL Version 2 section of the License
  ~    file that accompanied this code.
  ~
  ~    Modifications:
  ~    If applicable, add the following below the License Header, with the fields
  ~    enclosed by brackets [] replaced by your own identifying information:
  ~    "Portions Copyright [year] [name of copyright owner]"
  ~
  ~    Contributor(s):
  ~    If you wish your version of this file to be governed by only the CDDL or
  ~    only the GPL Version 2, indicate your decision by adding "[Contributor]
  ~    elects to include this software in this distribution under the [CDDL or GPL
  ~    Version 2] license."  If you don't indicate a single choice of license, a
  ~    recipient has the option to distribute your version of this file under
  ~    either the CDDL, the GPL Version 2 or to extend the choice of license to
  ~    its licensees as provided above.  However, if you add GPL Version 2 code
  ~    and therefore, elected the GPL Version 2 license, then the option applies
  ~    only if the new code is made subject to such option by the copyright
  ~    holder.
  -->

<!-- Portions Copyright [2021] [OmniFaces and/or its affiliates] --> 
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>org.omnifaces.arquillian</groupId>
        <artifactId>parent-glassfish-containers</artifactId>
        <version>@project.version@</version>
    </parent>
    
    <groupId>org.omnifaces.arquillian.test</groupId>
    <artifactId>microprofile-test</artifactId>
    <packaging>war</packaging>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>@arquillian.version@</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>10.0.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <container.version>@project.version@</container.version>
        <glassfish.version>@glassfish.version@</glassfish.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Run integration tests -->
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <failIfNoTests>true</failIfNoTests>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.4</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>glassfish-server-embedded</id>
            <dependencies>
                <dependency>
                    <groupId>org.omnifaces.arquillian</groupId>
                    <artifactId>arquillian-glassfish-server-embedded</artifactId>
                    <version>${container.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.glassfish.main.extras</groupId>
                    <artifactId>glassfish-embedded-all</artifactId>
                    <version>${glassfish.version}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <argLine>
                                --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                                --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                                --add-opens=java.base/java.util=ALL-UNNAMED
                                --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
                                --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED
                            </argLine>
                            <!-- don't mix compile-time apis and bundled 
                                server apis -->
                            <classpathDependencyScopeExclude>compile</classpathDependencyScopeExclude>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>glassfish-server-managed</id>
            <dependencies>
                <dependency>
                    <groupId>org.omnifaces.arquillian</groupId>
                    <artifactId>arquillian-glassfish-server-managed</artifactId>
                    <version>${container.version}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <!-- download and unpack glassfish server -->
                    <plugin>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>unpack</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>unpack</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${session.executionRootDirectory}/target</outputDirectory>
                                    <markersDirectory>
                                        ${session.executionRootDirectory}/target/dependency-maven-plugin-markers
                                    </markersDirectory>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.glassfish.main.distributions</groupId>
                                            <artifactId>glassfish</artifactId>
                                            <type>zip</type>
                                            <version>${glassfish.version}</version>
                                            <overWrite>false</overWrite>
                                            <outputDirectory>${session.executionRootDirectory}/target</outputDirectory>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- pass server location to test -->
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <systemPropertyVariables>
                                <!-- Pass location of server installation to arquillian container -->
                                <glassfish.home>${session.executionRootDirectory}/target/glassfish7</glassfish.home>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>
